--- a/Project 1/Modern_Frame_Gallery/css/style.css
+++ b/Project 1/Modern_Frame_Gallery/css/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .nav-bar a {
-    color: #fff;
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2px;
